[package]
name = "oscar-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { path = "../../axum", features = ["macros"] }
tracing = { version = "0", features = ["async-await"] }
tracing-subscriber = { version = "0", features = ["chrono", "env-filter"] }
serde = { version = "1", features = ["derive"] }
#serde_json = "1"
config = { version = "0", features = ["yaml"] }
anyhow = { version = "1" }
sea-orm = { version = "1", features = ["runtime-tokio", "with-rust_decimal", "with-chrono", "debug-print", "sqlx-postgres"] }
num_cpus = "1"
#thiserror = "2"